mouse: wrap device button mapping into gdk_error_trap_push/pop

The device may have disappeared by the time we get here, so make sure we catch
BadDevice errors as well by moving the error trap push up before the first X
call.

https://bugzilla.gnome.org/show_bug.cgi?id=724789